--- a/package.json
+++ b/package.json
@@ -7,5 +7,8 @@
     "express": "4.17.1",
     "express-handlebars": "3.1.0",
     "nodemon": "^2.0.15"
+  },
+  "scripts": {
+    "start": "node_modules/.bin/nodemon server.js"
   }
 }
